--- a/style/main.css
+++ b/style/main.css
@@ -3,10 +3,10 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 /* header css */
 header {
-  font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
   background-color: black;
   display: flex;
@@ -16,8 +16,8 @@ header {
 }
 .title {
   text-align: center;
-  border: solid wheat;
-  color: wheat;
+  border: solid white;
+  color: white;
   width: 200px;
 }
 .btns {
@@ -31,31 +31,39 @@ header {
 
 .btns li a {
   text-decoration: none;
-  color: wheat;
+  color: white;
   padding: 7px;
   border-radius: 4px;
-  border: solid wheat;
+  border: solid white;
 }
 .btns li a:hover {
   color: black;
-  background-color: wheat;
+  background-color: white;
 }
-/* body css */
-.main {
-  height: 1100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px;
-}
-.child {
-  border-radius: 20px;
-  height: 500px;
+footer {
   background-color: black;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.hero img {
-  border-radius: 20px;
-  height: 100%;
+footer .logo {
+  margin: 10px;
+  height: 90%;
+  width: 20%;
+}
+footer .logo img {
   width: 100%;
+  height: 100%;
+}
+.footer-info {
+  height: 90%;
+  width: 60%;
+  color: white;
+  text-align: center;
+}
+.footer-info ul {
+  margin: 7%;
+  list-style: none;
 }
