--- a/style/dest.css
+++ b/style/dest.css
@@ -18,7 +18,7 @@
   }
 .dest-info {
 
-    padding: 100px;
+    padding: 70px;
     font-size: xx-large;
     width: 40%;
     height: 80%;
@@ -28,3 +28,15 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: x-large;
   }
+  .dest-info .question{
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+
+  }
+    
+  
+   
+    
+  
+  
